--- a/src/styles/scss/reset.scss
+++ b/src/styles/scss/reset.scss
@@ -6,7 +6,6 @@
 }
 
 body {
-  position: relative;
   overflow-x: hidden;
 }
 .body--active {
